--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+	<base href="." />
 </head>
 
 <body>
