--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Svelte app</title>
+	<meta name="description" content="guess the politician game" />
+	<title>Guess The Politician</title>
 
 	<link rel='icon' type='image/png' href='favicon.png'>
 	<link rel='stylesheet' href='global.css'>
