--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta name="description" content="guess the politician game" />
-	<title>Guess The Politician</title>
+	<!-- general -->
+	<title>Rate den Politiker</title>	
+	<meta name="description" content="Rate den Politiker" />
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" value="Rate den Politiker">
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Rate den Politiker" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://liip.github.io/guess-the-politician/" />
+	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
+	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
 
 	<link rel='icon' type='image/png' href='favicon.png'>
 	<link rel='stylesheet' href='global.css'>
