--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Rate den Politiker</title>	
 	<meta name="description" content="Rate den Politiker" />
 	<!-- Twitter Card data -->
-	<meta name="twitter:card" value="Rate den Politiker">
+	<meta name="twitter:card" value="summary">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Rate den Politiker" />
