styles and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
+	<link rel="shortcut icon" href="favicon.ico" type="image/ico">
+
 	<script defer src='build/bundle.js'></script>
 </head>
 
