--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
 	<title>Rate den Politiker</title>	
 	<meta name="description" content="Rate den Politiker" />
 	<!-- Twitter Card data -->
-	<meta name="twitter:card" value="summary">
-
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@liip">
+	<meta name="twitter:creator" content="@liip">
+	<meta name="twitter:title" content="Rate den Politiker">
+	<meta name="twitter:description" content="Kennst du das Schweizer Parlament?">
+	<meta name="twitter:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg">
+	
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Rate den Politiker" />
-	<meta property="og:type" content="article" />
+	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://liip.github.io/guess-the-politician/" />
 	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
 	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
+	
+	<link rel="alternate" hreflang="de" href="https://liip.github.io/guess-the-politician/#de" />
+	<link rel="alternate" hreflang="fr" href="https://liip.github.io/guess-the-politician/#fr" />
+	<link rel="alternate" hreflang="it" href="https://liip.github.io/guess-the-politician/#it" />
+	<link rel="alternate" hreflang="rm" href="https://liip.github.io/guess-the-politician/#rm" />
 
-	<link rel='icon' type='image/png' href='favicon.png'>
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
