--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
 	<link rel="alternate" hreflang="fr" href="https://liip.github.io/guess-the-politician/#fr" />
 	<link rel="alternate" hreflang="it" href="https://liip.github.io/guess-the-politician/#it" />
 	<link rel="alternate" hreflang="rm" href="https://liip.github.io/guess-the-politician/#rm" />
-
+	<link rel="alternate" hreflang="x-default" href="https://liip.github.io/guess-the-politician/" />
+	
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
