--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<!-- general -->
 	<title>Rate den Politiker</title>	
-	<meta name="description" content="Rate den Politiker" />
+	<meta name="description" content="Kennst du das Schweizer Parlament?" />
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@liip">
@@ -21,6 +21,7 @@
 	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
 	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
 	
+	<link rel="canonical" href="https://liip.github.io/guess-the-politician/" />
 	<link rel="alternate" hreflang="de" href="https://liip.github.io/guess-the-politician/#de" />
 	<link rel="alternate" hreflang="fr" href="https://liip.github.io/guess-the-politician/#fr" />
 	<link rel="alternate" hreflang="it" href="https://liip.github.io/guess-the-politician/#it" />
