--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<!-- general -->
-	<title>Rate den Politiker</title>	
+	<title>Parlaqui</title>	
 	<meta name="description" content="Kennst du das Schweizer Parlament?" />
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@liip">
 	<meta name="twitter:creator" content="@liip">
-	<meta name="twitter:title" content="Rate den Politiker">
+	<meta name="twitter:title" content="Parlaqui">
 	<meta name="twitter:description" content="Kennst du das Schweizer Parlament?">
 	<meta name="twitter:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg">
 	
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Rate den Politiker" />
+	<meta property="og:title" content="Parlaqui" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://liip.github.io/guess-the-politician/" />
 	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
