--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Parlaqui" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://liip.github.io/guess-the-politician/" />
+	<meta property="og:url" content="https://parlaqui.swiss/" />
 	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
 	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
 	
-	<link rel="canonical" href="https://liip.github.io/guess-the-politician/" />
-	<link rel="alternate" hreflang="de" href="https://liip.github.io/guess-the-politician/#de" />
-	<link rel="alternate" hreflang="fr" href="https://liip.github.io/guess-the-politician/#fr" />
-	<link rel="alternate" hreflang="it" href="https://liip.github.io/guess-the-politician/#it" />
-	<link rel="alternate" hreflang="rm" href="https://liip.github.io/guess-the-politician/#rm" />
-	<link rel="alternate" hreflang="x-default" href="https://liip.github.io/guess-the-politician/" />
+	<link rel="canonical" href="https://http://parlaqui.swiss/" />
+	<link rel="alternate" hreflang="de" href="https://parlaqui.swiss/#de" />
+	<link rel="alternate" hreflang="fr" href="https://parlaqui.swiss/#fr" />
+	<link rel="alternate" hreflang="it" href="https://parlaqui.swiss/#it" />
+	<link rel="alternate" hreflang="rm" href="https://parlaqui.swiss/#rm" />
+	<link rel="alternate" hreflang="x-default" href="https://parlaqui.swiss/" />
 	
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
