own og tc image

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
 	<meta name="twitter:creator" content="@liip">
 	<meta name="twitter:title" content="Parlaqui">
 	<meta name="twitter:description" content="Kennst du das Schweizer Parlament?">
-	<meta name="twitter:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg">
+	<meta name="twitter:image" content="parlament.jpg">
 	
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Parlaqui" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://parlaqui.swiss/" />
-	<meta property="og:image" content="https://www.parlament.ch/SiteCollectionImages/teaser-content/51-legislatur.jpg" />
+	<meta property="og:image" content="parlament.jpg" />
 	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
 	
 	<link rel="canonical" href="https://http://parlaqui.swiss/" />
