--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,21 @@
 	<meta name="twitter:creator" content="@liip">
 	<meta name="twitter:title" content="Parlaqui">
 	<meta name="twitter:description" content="Kennst du das Schweizer Parlament?">
-	<meta name="twitter:image" content="parlament.jpg">
+	<meta name="twitter:image" content="https://parlaqui.ch/parlament.jpg">
 	
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Parlaqui" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://parlaqui.swiss/" />
-	<meta property="og:image" content="parlament.jpg" />
+	<meta property="og:url" content="https://parlaqui.ch/" />
+	<meta property="og:image" content="https://parlaqui.ch/parlament.jpg" />
 	<meta property="og:description" content="Kennst du das Schweizer Parlament?" />
 	
-	<link rel="canonical" href="https://http://parlaqui.swiss/" />
-	<link rel="alternate" hreflang="de" href="https://parlaqui.swiss/#de" />
-	<link rel="alternate" hreflang="fr" href="https://parlaqui.swiss/#fr" />
-	<link rel="alternate" hreflang="it" href="https://parlaqui.swiss/#it" />
-	<link rel="alternate" hreflang="rm" href="https://parlaqui.swiss/#rm" />
-	<link rel="alternate" hreflang="x-default" href="https://parlaqui.swiss/" />
+	<link rel="canonical" href="https://parlaqui.ch/" />
+	<link rel="alternate" hreflang="de" href="https://parlaqui.ch/#de" />
+	<link rel="alternate" hreflang="fr" href="https://parlaqui.ch/#fr" />
+	<link rel="alternate" hreflang="it" href="https://parlaqui.ch/#it" />
+	<link rel="alternate" hreflang="rm" href="https://parlaqui.ch/#rm" />
+	<link rel="alternate" hreflang="x-default" href="https://parlaqui.ch/" />
 	
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
