--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
-	<link rel="shortcut icon" href="favicon.ico" type="image/ico">
+	<link rel="shortcut icon" href="favicon.png" type="image/png">
 	<script defer src='build/bundle.js'></script>
 </head>
 <body>
